--- a/.example.env
+++ b/.example.env
@@ -27,3 +27,7 @@ DB_IDLE_TIME=90
 
 # Customize Env
 JWT_SECRET=iAmSoFuckingHunrgry
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=
+SMTP_PASSWORD=
