john udpate email tpl

--- a/.example.env
+++ b/.example.env
@@ -33,3 +33,11 @@ SMTP_USERNAME=
 SMTP_PASSWORD=
 
 OAUTH2_HEADER_PREFIX=Kmk
+
+# email
+SIGNUP_EMAIL_SUBJECT=Signup Email Confirmation
+SIGNUP_EMAIL_CONTENT=This is email confirmation, please follow below link to complete sign up flow.
+SIGNUP_EMAIL_LINK_TEXT=Click to complete this flow
+FORGET_PWD_EMAIL_SUBJECT=Forget Password Email Confirmation
+FORGET_PWD_EMAIL_CONTENT=This is email confirmation, please follow below link to complete forget password flow.
+FORGET_PWD_LINK_TEXT=Click to complete this flow
